
* OB-01-013: The "click here to force-quit the app" function inside
  the help page has been replaced with instructions on how to quit
  the app manually. The "onionbrowser:forcequit" URL was previously
  susceptible to an app-crasher attack (i.e. by inclusion in a tag
  such as <img src="onionbrowser:forcequit">) and has been removed.
  Fixed in c5cfb15a99.

* User-agent strings have been updated. "Windows" spoof updated to
  Windows 7 Firefox 24.0, same as Tor Browser Bundle. "Mac Safari"
  updated to OS X 10.9.2 Safari 7.0.3, most up-to-date version.

===== 1.4.1 - In App Store =====
Apr 21 2014 - Submit Date
Apr 23 2014 - App store availability

* OpenSSL updated to 1.0.1g, fixing the Heartbleed bug. Note that in
  Onion Browser, Heartbleed only affects the connection between your
  the device and a Tor entry guard or bridge. Browser traffic is not
  vulnerable (but speaking to affected websites is still insecure
  regardless of which browser you use).

* Tor updated to 0.2.4.21.

* Compiled for iOS SDK 7.1 (XCode 5.1).

* Onion Browser now encrypts locally-stored data, including browser
  settings, bookmarks, and Tor bridges (if enabled).

* Fix issue where Onion Browser was not allowing third-party apps to
  open. When encountering a URI scheme that can open in another app,
  Onion Browser will now ask the user if they want to open the app.
  (Example: clicking on a "tel:" link can now open the phone app
  rather than simply fail.)

* Tweaks to content-security-policy so that even with "active content
  blocking" enabled, some safe activity is still allowed, such as
  using the target attribute on a link inside a frame. Fixes issues
  with websites using frames (including default home page). Contributed
  by Łukasz Pilorz.


PREVIOUS VERSIONS:

===== 1.4 =====
Feb 01 2014 - Submit Date
Feb 05 2014 - App store availability

* App is now being compiled with 64-bit CPU optimization (for iPhone 5S